2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Don't use the dotted line as the end of
    definition marker. This is more reliable.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Handles the case when no strategies are
    available.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb: Fixed String#kana? so that a string containing
    both hiragana and katakana returns true. Added String#japanese?.
    * lib/fantasdic/sources/edict_file.rb: Added a new source to look up words
    in an EDICT file. The implementation uses egrep for performance. A pure
    Ruby implementation needs be added for cases when egrep isn't available.
    See http://www.csse.monash.edu.au/~jwb/j_edict.html for more information
    about EDICT.
    * po/POTFILES.in: Added edict_file.rb.

2007-10-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * post-clean.rb: Added files that need to be cleaned.

2007-10-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/pre-setup.rb: Don't copy .svn dirs.

2007-10-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb: Method "available_strategies"
    should not depend on method "available_databases".

2007-10-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * po/POTFILES.in: Added lib/fantasdic/source_base.rb.

2007-10-14 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb: Added String#latin?, String#kana?, String#kanji?
    and File::which helpers.
    * lib/fantasdic/sources/dict_server.rb: Removed useless attr_accessors and
    moved vbox internal spacing...
    * lib/fantasdic/source_base.rb:... here. Fixed a comment.

2007-10-13 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: "gtk-help" must not be
    translatable (bug of glade3, file edited manually).
    * data/fantasdic/glade/preferences_dialog.glade: Ditto.